--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "@fortawesome/angular-fontawesome": "^0.11.1",
     "@fortawesome/fontawesome-free": "^6.2.0",
     "@ng-bootstrap/ng-bootstrap": "^13.0.0",
+    "@okta/okta-angular": "^6.0.0",
+    "@okta/okta-auth-js": "^7.0.1",
+    "@okta/okta-signin-widget": "^6.8.2",
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.2.2",
     "rxjs": "~7.5.0",
